--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
             <h1 id="quote">Today is your opportunity to build the tomorrow you want.</h1>
             <h2 id="author">- Ken Poirot</h2>
         </div>
-        <script src="quotes.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
