--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="quote-container">
-            <h1 id="quote">Today is your opportunity to build the tomorrow you want.</h1>
-            <h2 id="author">- Ken Poirot</h2>
+            <h1 id="quote"></h1>
+            <h2 id="author"></h2>
         </div>
         <script src="index.js"></script>
     </body>
